# adaptive-genai-learning-tutor

./: .env.example  .gitignore  .mcp.json  .railwayignore  Adaptive_Learning_Tutor_Plan.md  HANDOFF.md  Improved_OWASP_Security_Audit_Prompt.md  OWASP_Security_Audit_Prompt.md  PRD.md  Procfile  RAILWAY_DEPLOY.md  README.md  REVIEW.md  SECURITY.md  Week3_Course_Summary_and_Project_Planning_Guide.md  Winning_Week3_Project_Ideas.md  build_genai_research_corpus.py  master-security-report.md  owasp-agentic-audit-report.md  owasp-llm-audit-report.md  owasp-web-audit-report.md  pyproject.toml  railway.json
.github/: dependabot.yml
LangChain Skill/: SKILL.md
LangGraph Skill/: SKILL.md
LangSmith Skill/: SKILL.md
backend/: __init__.py  agent.py  agent_runtime.py  agent_store.py  agent_tools.py  analytics.py  audit.py  auth.py  checkpoints.py  config.py  corpus.py  dependencies.py  enterprise_sink.py  evaluation.py  graph.py  grounding_validator.py  infographics.py  input_filter.py  llm_provider.py  main.py  mastery.py  models.py  nebius_provider.py  observability.py  pgvector_store.py  qwen_vector_store.py  rate_limit.py  settings.py  source_governance.py  state_integrity.py  stores.py  supabase_store.py  token_budget.py  tools.py  topic_utils.py  vector_store.py
docs/: REBUILD_FROM_SCRATCH.md  deployment.md
frontend/: index.html  package-lock.json  package.json  playwright.config.mjs
genai_research/: coverage_report.json  research_index.json
mcp_server/: __init__.py  server.py
scripts/: api_contract_smoke.py  backup_state.py  check_all.py  corpus_immutability_check.py  demo_flow.py  export_state.py  generate_demo_traces.py  migrate_json_to_postgres.py  run_evals.py  (+5 more)
(+458 files in other folders)
