[project]
name = "adaptive-genai-learning-tutor"
version = "0.1.0"
description = "Local-first Adaptive GenAI Learning Tutor over the genai_research corpus"
requires-python = ">=3.12,<3.14"
dependencies = [
    "cairosvg>=2.9.0",
    "deepagents>=0.6.10",
    "fastapi>=0.115",
    "httpx>=0.27",
    "langchain>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    "langchain-openai>=1.0",
    "langgraph>=1.0",
    "langgraph-checkpoint-sqlite>=2.0",
    "langsmith>=0.1",
    "mcp>=1.2",
    "pydantic>=2.8",
    "pyjwt[crypto]>=2.10",
    "python-dotenv>=1.0",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
# Multi-instance graph checkpointing. Enable with
# TUTOR_GRAPH_CHECKPOINTER_BACKEND=postgres + DATABASE_URL.
postgres = [
    "langgraph-checkpoint-postgres>=2.0",
    "psycopg[binary]>=3.2",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
